--- a/PILOTE_Suite.html
+++ b/PILOTE_Suite.html
@@ -648,7 +648,22 @@ body.home-no-events .welcome{
                                     </div>
                                 </details>
                             </div>
-                        </div>
+                        
+<!-- ===== V15: Ordre d'affichage des agendas cochés ===== -->
+<div id="gcal-order-wrap" style="display:none;grid-column:1/-1;margin-top:12px;">
+  <div style="font-weight:700;font-size:.78rem;margin-bottom:6px;color:#333;display:flex;align-items:center;gap:8px;">
+    <i class="fas fa-sort"></i> Ordre d'affichage des agendas cochés
+  </div>
+  <small style="color:#888;font-size:.65rem;display:block;margin-bottom:8px;line-height:1.35;">
+    Glissez-déposez pour choisir l'ordre des cartes dans <b>Calendrier</b> (et l'ordre d'affichage sur l'accueil).
+  </small>
+  <ul id="gcal-order-list" class="order-list" style="margin:0;padding:0;list-style:none;"></ul>
+  <div class="order-hint" style="margin-top:6px;">
+    <i class="fas fa-hand-pointer"></i> Glissez pour réordonner
+  </div>
+</div>
+
+</div>
 
                             <div style="margin-top:20px;border-top:2px solid #e0e0e0;padding-top:16px;">
                                 <div style="font-weight:700;font-size:.88rem;margin-bottom:10px;color:#0078d4;display:flex;align-items:center;gap:8px;"><i class="fab fa-microsoft"></i> Outlook / Office 365</div>
@@ -3818,6 +3833,148 @@ function _v12RerenderSoon(){
           window.gcalFetchEvents({silent:true});
         }
       }catch(e){}
+      return r;
+    };
+  }
+})();
+</script>
+
+
+<script>
+/* ===== V15 - Ordre agendas cochés + Sync fiabilisée + Masquage créneaux (<=3) dans la grille ===== */
+(function(){
+  const TITLE_MIN = 4; // >3 affiché
+  function getSettingsSafe(){
+    try{ if (typeof getSettings === 'function') return getSettings() || {}; }catch(e){}
+    try{ if (typeof STORAGE_KEY !== 'undefined') return JSON.parse(localStorage.getItem(STORAGE_KEY) || '{}') || {}; }catch(e){}
+    return {};
+  }
+  function saveSettingsSafe(s){
+    try{ if (typeof STORAGE_KEY !== 'undefined') localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }catch(e){}
+  }
+  function getCalNameById(id, s){
+    const cals = (s && Array.isArray(s.gcalCals)) ? s.gcalCals : (window._gcalCalsData || []);
+    const found = (cals||[]).find(c => c && c.id === id);
+    return found ? found.name : id;
+  }
+
+  function renderGcalOrderUI(){
+    const wrap = document.getElementById('gcal-order-wrap');
+    const list = document.getElementById('gcal-order-list');
+    if (!wrap || !list) return;
+
+    const s = getSettingsSafe();
+    const enabled = !!(s.gcalEnabled || s.useGcal || s.gcal || s.googleCalendarEnabled) ||
+      (document.getElementById('s-gcal') && document.getElementById('s-gcal').checked);
+    if (!enabled){ wrap.style.display='none'; return; }
+
+    const sel = Array.isArray(s.gcalSel) ? s.gcalSel.slice() : (typeof getGcalSel === 'function' ? (getGcalSel()||[]) : []);
+    if (!sel.length){ wrap.style.display='none'; return; }
+    wrap.style.display='block';
+
+    const order = Array.isArray(s.gcalSelOrder) ? s.gcalSelOrder.slice() : [];
+    const setOrder = new Set(order);
+    const merged = order.filter(id => sel.includes(id)).concat(sel.filter(id => !setOrder.has(id)));
+
+    list.innerHTML = '';
+    merged.forEach((id) => {
+      const li = document.createElement('li');
+      li.className = 'order-item';
+      li.draggable = true;
+      li.dataset.id = id;
+      li.innerHTML = `
+        <i class="fas fa-grip-lines order-grip"></i>
+        <div class="order-icon" style="background:#3498db;"><i class="fas fa-calendar-alt"></i></div>
+        <div class="order-label">${getCalNameById(id, s)}</div>
+      `;
+
+      li.addEventListener('dragstart', () => { li.classList.add('dragging'); });
+      li.addEventListener('dragend', () => {
+        li.classList.remove('dragging');
+        persistGcalOrderFromUI();
+        try{ if (typeof pushGcalToModules === 'function') pushGcalToModules(); }catch(e){}
+      });
+      li.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        const dragging = list.querySelector('.dragging');
+        if (!dragging || dragging === li) return;
+        const rect = li.getBoundingClientRect();
+        const after = (e.clientY - rect.top) > rect.height/2;
+        list.insertBefore(dragging, after ? li.nextSibling : li);
+      });
+      list.appendChild(li);
+    });
+  }
+
+  function persistGcalOrderFromUI(){
+    const list = document.getElementById('gcal-order-list');
+    if (!list) return;
+    const ids = Array.from(list.querySelectorAll('.order-item')).map(li => li.dataset.id).filter(Boolean);
+    const s = getSettingsSafe();
+    s.gcalSelOrder = ids;
+    if (Array.isArray(s.gcalSel)){
+      const set = new Set(ids);
+      s.gcalSel = ids.filter(id => s.gcalSel.includes(id)).concat(s.gcalSel.filter(id => !set.has(id)));
+    }
+    saveSettingsSafe(s);
+  }
+
+  const _getGcalSel = window.getGcalSel;
+  if (typeof _getGcalSel === 'function'){
+    window.getGcalSel = function(){
+      const sel = _getGcalSel.apply(this, arguments) || [];
+      try{
+        const s = getSettingsSafe();
+        const order = Array.isArray(s.gcalSelOrder) ? s.gcalSelOrder : [];
+        if (!order.length) return sel;
+        const set = new Set(order);
+        return order.filter(id => sel.includes(id)).concat(sel.filter(id => !set.has(id)));
+      }catch(e){ return sel; }
+    };
+  }
+
+  function hideShortBlocksInGrid(){
+    const titles = document.querySelectorAll('.fc-event-title, .fc-event-title-container, .fc-event-title.fc-sticky, .fc-list-event-title');
+    titles.forEach(t => {
+      const txt = (t.textContent || '').trim();
+      if (txt && txt.length <= 3){
+        const ev = t.closest('.fc-event') || t.closest('tr') || t.closest('a');
+        if (ev) ev.style.display = 'none';
+      }
+    });
+  }
+
+  function trySilentSync(){
+    try{
+      const s = getSettingsSafe();
+      const enabled = !!(s.gcalEnabled || s.useGcal || s.gcal || s.googleCalendarEnabled) ||
+        (document.getElementById('s-gcal') && document.getElementById('s-gcal').checked);
+      if (!enabled) return;
+      if (typeof window.gcalFetchEvents === 'function'){
+        window.gcalFetchEvents({silent:true});
+      }
+    }catch(e){}
+  }
+
+  document.addEventListener('visibilitychange', function(){
+    if (!document.hidden) setTimeout(trySilentSync, 600);
+  });
+  window.addEventListener('focus', function(){
+    setTimeout(trySilentSync, 600);
+  });
+
+  document.addEventListener('DOMContentLoaded', function(){
+    renderGcalOrderUI();
+    hideShortBlocksInGrid();
+    const obs = new MutationObserver(() => { hideShortBlocksInGrid(); });
+    obs.observe(document.body, {childList:true, subtree:true});
+  });
+
+  const _openSettings = window.openSettings;
+  if (typeof _openSettings === 'function'){
+    window.openSettings = function(){
+      const r = _openSettings.apply(this, arguments);
+      setTimeout(renderGcalOrderUI, 250);
       return r;
     };
   }
